tests/http/snapshots/http__frontend_and_docs__legacy_docs.snap
---
source: tests/http/frontend_and_docs.rs
expression: "get(\"/docs\").without_body().send().await"
---
GET /docs
status: 200 OK
content-type: text/html; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
<body omitted>
