tests/http/snapshots/http__frontend_and_docs__missing_file.snap
---
source: tests/http/frontend_and_docs.rs
expression: "get(\"/missing.png\").send().await"
---
GET /missing.png
status: 404 Not Found
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
404
