tests/http/snapshots/http__frontend_and_docs__root.snap
---
source: tests/http/frontend_and_docs.rs
expression: "get(\"/\").send().await"
---
GET /
status: 200 OK
content-type: text/html; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
<!doctype html>
<html lang="en">
<head><meta charset="utf-8"><title>rustlog</title></head>
<body>
  <h1>rustlog</h1>
  <p>This build does not include the web frontend (built without the <code>embed-frontend</code> feature).</p>
  <p>API documentation: <a href="/api/v2/docs">v2</a>, <a href="/docs">legacy</a>.</p>
</body>
</html>
